# nyoom

./: .envrc  .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md  REUSE.toml  default.nix  flake.nix  garnix.yaml  go.mod  go.sum  main.go
.github/: demo.gif.license  demo.tape  dependabot.yml
.github/workflows/: build.yml  check.yml  clippy.yml  codeql.yml  nix.yml  release.yml  update-flake-lock.yml
cmd/: config.go  profile.go  root.go  userchrome.go
config/: base.go  init.go  userchromes.go
lib/: switch.go  userjs.go
nix/: package.nix  static.nix
presets/: edge.toml  material.toml  presets.go  shyfox.toml
scripts/: build.sh  demo.tape
src/: cmd.rs  config.rs  main.rs  presets.rs  source.rs  switch.rs  utils.rs
src/cmd/: add.rs  completions.rs  config.rs  list.rs  mod.rs  preset.rs  profile.rs  refresh.rs  remove.rs  switch.rs  update.rs
src/util/: switch.rs
src/utils/: download.rs  mod.rs
utils/: fs.go
