# SPDX-FileCopyrightText: 2024 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "nyoom"
version = "0.10.1"
edition = "2024"
description = "Small CLI Firefox userchrome manager"
authors = ["Ryan Cao <hello@ryanccn.dev>"]
publish = false

[dependencies]
anstream = "0.6.18"
async-recursion = "1.1.1"
bzip2 = "0.5.2"
clap = { version = "4.5.34", features = ["derive"] }
clap_complete = "4.5.47"
color-eyre = "0.6.3"
crossterm = "0.28.1"
enum_dispatch = "0.3.13"
etcetera = "0.10.0"
eyre = "0.6.12"
flate2 = "1.1.0"
humansize = "2.1.3"
owo-colors = "4.2.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["rustls-tls", "stream", "brotli", "zstd", "gzip"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = { version = "0.34.2", features = ["system"], default-features = false }
tar = "0.4.44"
temp-dir = "0.1.14"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
toml = "0.8.20"
url = "2.5.4"
xz2 = "0.1.7"
zip = "2.5.0"
zstd = "0.13.3"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
redundant_closure_for_method_calls = "allow"

[lints.rust]
unsafe_code = "forbid"
