# SPDX-FileCopyrightText: 2024 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "nyoom"
version = "0.10.2"
edition = "2024"
description = "Small CLI Firefox userchrome manager"
authors = ["Ryan Cao <hello@ryanccn.dev>"]
publish = false

[dependencies]
anstream = "0.6.18"
async-recursion = "1.1.1"
bytesize = "2.0.1"
bzip2 = "0.5.2"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.50"
color-eyre = { version = "0.6.4", default-features = false }
crossterm = "0.29.0"
enum_dispatch = "0.3.13"
etcetera = "0.10.0"
eyre = "0.6.12"
flate2 = "1.1.1"
owo-colors = "4.2.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["charset", "http2", "macos-system-configuration", "rustls-tls", "stream", "brotli", "zstd", "gzip"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = { version = "0.35.0", features = ["system"], default-features = false }
tar = "0.4.44"
temp-dir = "0.1.16"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
toml = "0.8.22"
url = "2.5.4"
xz2 = "0.1.7"
zip = "2.6.1"
zstd = "0.13.3"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
redundant_closure_for_method_calls = "allow"

[lints.rust]
unsafe_code = "forbid"
