# SPDX-FileCopyrightText: 2024 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "nyoom"
version = "0.10.2"
edition = "2024"
description = "Small CLI Firefox userchrome manager"
authors = ["Ryan Cao <hello@ryanccn.dev>"]
publish = false

[dependencies]
anstream = "0.6.21"
async-recursion = "1.1.1"
bytesize = "2.3.1"
bzip2 = "0.6.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
color-eyre = { version = "0.6.5", default-features = false }
crossterm = "0.29.0"
enum_dispatch = "0.3.13"
etcetera = "0.10.0"
eyre = "0.6.12"
flate2 = "1.1.5"
owo-colors = "4.2.3"
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["charset", "http2", "macos-system-configuration", "rustls-tls", "stream", "brotli", "zstd", "gzip"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = { version = "0.37.2", features = ["system"], default-features = false }
tar = "0.4.44"
temp-dir = "0.1.16"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
toml = "0.9.8"
url = "2.5.7"
xz2 = "0.1.7"
zip = "6.0.0"
zstd = "0.13.3"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
redundant_closure_for_method_calls = "allow"

[lints.rust]
unsafe_code = "forbid"
